--- a/styles/flower.css
+++ b/styles/flower.css
@@ -55,14 +55,87 @@ button {
     line-height: normal;
     cursor: pointer;
 }
-button:hover{
+
+button:hover {
     background-color: rgb(30, 153, 210);
 }
 
- .banner-img img{
+.banner-img img {
     width: 600px;
     height: 700px;
     flex-shrink: 0;
-     vertical-align: middle;
+    vertical-align: middle;
 }
+
+/*feature section*/
+.section-heading h2 {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    margin-bottom: 20px;
+}
+
+.bannar .bannar-img img {
+    width: 100%;
+    vertical-align: middle;
+}
+
+#featured {
+    padding: 100px 0;
+}
+
+.section-heading {
+    margin: 20px auto;
+    text-align: center;
+    max-width: 500px;
+}
+
+.section-contain {
+   display:flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.section-contain .flower .flower-img {
+    background-color: pink;
+    border-radius: 300px 300px 0px 0px;
+    padding: 30px 15px 0;
+    height: 500x;
+    display: flex;
+    align-items: end;
+}
+
+.section-contain .flower .flower-img img {
+    width: 100%;
+}
+
+.section-contain .flower .pink {
+    background: rgba(167, 33, 98, 0.15);
+}
+
+.section-contain .flower .blue {
     
+    background: rgba(5, 151, 160, 0.15);
+
+
+}
+
+.section-contain .flower .green {
+    background: rgba(71, 125, 17, 0.15);
+}
+
+.section-contain .flower p {
+    color: #ec2d76;
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 35px;
+    /* 145.833% */
+    text-decoration-line: underline;
+}
